--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="images/site.webmanifest">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/aos.css" rel="stylesheet">
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/css/aos.css" rel="stylesheet">
+    <script src="js/iconify.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link href="styles/main.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/styles/main-final.min.css" rel="stylesheet">
 </head>
 <body id="top">
 <header>
@@ -565,11 +565,11 @@
         </div>
     </div>
 </div>
-<script src="js/core/jquery.3.2.1.min.js"></script>
-<script src="js/core/popper.min.js"></script>
-<script src="js/core/bootstrap.min.js"></script>
-<script src="js/now-ui-kit.js?v=1.1.0"></script>
-<script src="js/aos.js"></script>
-<script src="scripts/main.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/core/jquery.3.2.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/core/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/core/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/now-ui-kit.js?v=1.1.0"></script>
+<script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/aos.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/scripts/main.js"></script>
 </body>
 </html>
