--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vishnuraaj Balasubramanian - Resume</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/favicon-16x16.png">
+    <link rel="manifest" href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/site.webmanifest">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/css/aos.css" rel="stylesheet">
-    <script src="js/iconify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/iconify.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/styles/main-final.min.css" rel="stylesheet">
 </head>
@@ -21,7 +21,7 @@
     <div class="profile-page sidebar-collapse">
         <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-white" color-on-scroll="400">
             <div class="container">
-                <div class="navbar-translate"><a class="navbar-brand " href="#" rel="tooltip">Vishnuraaj B</a>
+                <div class="navbar-translate"><a class="navbar-brand " href="javascript:void;" rel="tooltip">Vishnuraaj B</a>
                     <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navigation" aria-controls="navigation" aria-expanded="false"
                             aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span
@@ -50,15 +50,15 @@
             <div class="wrapper">
                 <div class="page-header page-header-small" filter-color="green">
                     <div class="page-header-image" data-parallax="true"
-                         style="background-image: url('images/cc-bg-1.jpg');"></div>
+                         style="background-image: url('https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/cc-bg-1.jpg');"></div>
                     <div class="container">
                         <div class="content-center">
-                            <div class="cc-profile-image"><a href="#"><img src="images/vishnu.jpg" alt="Image"/></a>
+                            <div class="cc-profile-image"><a href="javascript:void;"><img src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/vishnu.jpg" alt="Image"/></a>
                             </div>
                             <div class="h2 title">Vishnuraaj Balasubramanian</div>
                             <p class="category text-white">Software Developer</p><a
                                 class="btn btn-blue btn-round smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
-                                data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-blue btn-round"
+                                data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-blue smooth-scroll btn-round"
                                                                                 href="#contact"
                                                                                 data-aos="zoom-in"
                                                                                 data-aos-anchor="data-aos-anchor">Download
