--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vishnuraaj Balasubramanian - Resume</title>
+	<meta name="title" content="Digital Resume - Vishnuraaj Balasubramanian">
+	<meta name="description" content="This is the Digital Resume of Vishnuraaj balasubramanian">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://demontricerz.github.io/vishnuraajbalasubramanian">
+	<meta property="og:title" content="Digital Resume - Vishnuraaj B">
+	<meta property="og:description" content="This is the Digital resume of Vishnuraaj B">
+	<meta property="og:image" content="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/android-chrome-512x512.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://demontricerz.github.io/vishnuraajbalasubramanian">
+	<meta property="twitter:title" content="Digital Resume - Vishnuraaj B">
+	<meta property="twitter:description" content="This is the Digital resume of Vishnuraaj B">
+    <meta property="twitter:image" content="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/android-chrome-512x512.png">    
     <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/favicon-16x16.png">
