--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-                        <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Projects</a></li>
                         <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                         <li class="nav-item"><a class="nav-link smooth-scroll"
                                                 href="javascript:void;">Download
