--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-8 ml-auto mr-auto">
-                                <div class="h4 text-center mb-4 title">Portfolio</div>
+                                <div class="h4 text-center mb-4 title">Projects</div>
                                 <div class="nav-align-center">
                                     <ul class="nav nav-pills nav-pills-primary" role="tablist">
                                         <li class="nav-item"><a class="nav-link active" data-toggle="tab"
