--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://demontricerz.github.io/vishnuraajbalasubramanian">
     <meta property="og:title" content="Digital Resume - Vishnuraaj B">
     <meta property="og:description" content="This is the Digital resume of Vishnuraaj B">
-    <meta property="og:image" content="images/android-chrome-512x512.png">
+    <meta property="og:image" content="https://demontricerz.github.io/vishnuraajbalasubramanian/images/android-chrome-512x512.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://demontricerz.github.io/vishnuraajbalasubramanian">
     <meta property="twitter:title" content="Digital Resume - Vishnuraaj B">
     <meta property="twitter:description" content="This is the Digital resume of Vishnuraaj B">
-    <meta property="twitter:image" content="images/android-chrome-512x512.png">
+    <meta property="twitter:image" content="https://demontricerz.github.io/vishnuraajbalasubramanian/images/android-chrome-512x512.png">
     <link rel="apple-touch-icon" sizes="180x180"
         href="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
