--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Projects</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="javascript:void;">Download
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="https://drive.google.com/drive/folders/17e4qbLvtuW5J1jdx4VMOH6ylgDEW_8ru?usp=sharing">Download
                                     Certificates</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
                         </ul>
@@ -499,7 +499,7 @@
                                         <p class="category">Programming in C</p>
                                         <p>Credential Id: 18AAZZZZZ7665 <br>
                                             Grade Achieved: Outstanding<br>
-                                            <a href="https://drive.google.com/file/d/0ByTpvKuPcyWeNlhlZlJqbDNRQ3dueTRlVVN5bHRtUjl0aE53/view?usp=sharing"
+                                            <a href="https://drive.google.com/file/d/17ufeplQh7rygGLDmlHlVhQtyTWrZtCA8/view?usp=sharing"
                                                 target="_blank">Go
                                                 to Credential</a></p>
                                     </div>
@@ -522,7 +522,7 @@
                                         <p class="category">Programming in Java</p>
                                         <p>Credential Id: 18AAZZZZZ4262<br>
                                             Grade Achieved: Good <br>
-                                            <a href="https://drive.google.com/file/d/1XqcOtxXd0yfl2QvuNXs3YEzPyO9P9fzY/view?usp=sharing"
+                                            <a href="https://drive.google.com/file/d/17gz3rZmcD0i1QLTi0QPFH0nmYn-VlMcS/view?usp=sharing"
                                                 target="_blank">Go
                                                 to Credential</a></p>
                                     </div>
