--- a/index.html
+++ b/index.html
@@ -337,21 +337,21 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                                data-aos-anchor-placement="top-bottom"><a href="#willbesoon">
-                                                    <figure class="cc-effect"><img src="images/project-1.jpg"
+                                                data-aos-anchor-placement="top-bottom"><a target="_blank" href="https://shlk.ga">
+                                                    <figure class="cc-effect"><img src="https://shlk.ga/logo.webp"
                                                             alt="Image" />
                                                         <figcaption>
-                                                            <div class="h4">Recent Project</div>
+                                                            <div class="h4">Url Shortner</div>
                                                             <p>Web Development</p>
                                                         </figcaption>
                                                     </figure>
                                                 </a></div>
                                             <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                                data-aos-anchor-placement="top-bottom"><a href="#willbeuploadedsoon">
-                                                    <figure class="cc-effect"><img src="images/project-2.jpg"
+                                                data-aos-anchor-placement="top-bottom"><a target="_blank" href="https://shlk.ga/masterflow">
+                                                    <figure class="cc-effect"><img src="images/masterflow.png"
                                                             alt="Image" />
                                                         <figcaption>
-                                                            <div class="h4">Simple Flames Game(created website)</div>
+                                                            <div class="h4">Masterflow - Workflow Automation</div>
                                                             <p>Web Development</p>
                                                         </figcaption>
                                                     </figure>
@@ -359,26 +359,25 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                                data-aos-anchor-placement="top-bottom"><a
-                                                    href="https://drive.google.com/drive/folders/1dBabCC0623yMuFylMZZEka-Q1hWtkGfh?usp=sharing">
-                                                    <figure class="cc-effect"><img src="images/project-3.jpg"
+                                                data-aos-anchor-placement="top-bottom"><a target="_blank"
+                                                    href="https://shlk.ga/qrcode">
+                                                    <figure class="cc-effect"><img src="images/dtlogo.png"
                                                             alt="Image" />
                                                         <figcaption>
-                                                            <div class="h4">Employee User Registration and
-                                                                Authentication Form
+                                                            <div class="h4">DT - QR Code Generator
                                                             </div>
-                                                            <p>Web Development</p>
+                                                            <p>Windows GUI Application</p>
                                                         </figcaption>
                                                     </figure>
                                                 </a></div>
                                             <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                                data-aos-anchor-placement="top-bottom"><a
-                                                    href="https://drive.google.com/file/d/1ZskALlQSZ6vXvUVIqR3Q8VEucC5KccZO/view?usp=sharing">
-                                                    <figure class="cc-effect"><img src="images/project-4.jpg"
+                                                data-aos-anchor-placement="top-bottom"><a target="_blank"
+                                                    href="https://shlk.ga/attendance">
+                                                    <figure class="cc-effect"><img src="images/teams.png"
                                                             alt="Image" />
                                                         <figcaption>
-                                                            <div class="h4">Online E-voting System</div>
-                                                            <p>Web Development</p>
+                                                            <div class="h4">DT - Attendance Accumulator</div>
+                                                            <p>Windows GUI Development</p>
                                                         </figcaption>
                                                     </figure>
                                                 </a></div>
