--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         <br />
                         <div class="card">
                             <div class="row">
-                                <div class="col-md-3 bg-warning" data-aos="fade-right" data-aos-offset="50"
+                                <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
                                     data-aos-duration="500">
                                     <div class="card-body cc-experience-header">
                                         <p>December 2019</p>
