--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <p class="category text-white">Software Developer</p><a
                                     class="btn btn-blue btn-round smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
                                     data-aos-anchor="data-aos-anchor">Hire Me</a><a
-                                    class="btn btn-blue smooth-scroll btn-round" href="#contact" data-aos="zoom-in"
+                                    class="btn btn-blue smooth-scroll btn-round" href="https://shlk.ga/pdfresume" data-aos="zoom-in"
                                     data-aos-anchor="data-aos-anchor">Download
                                     CV</a>
                             </div>
