--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Projects</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link smooth-scroll" href="https://drive.google.com/drive/folders/17e4qbLvtuW5J1jdx4VMOH6ylgDEW_8ru?usp=sharing">Download
+                            <li class="nav-item"><a class="nav-link smooth-scroll" href="https://drive.google.com/drive/folders/17e4qbLvtuW5J1jdx4VMOH6ylgDEW_8ru?usp=sharing">View Certificates
                                     Certificates</a></li>
                             <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
                         </ul>
@@ -87,7 +87,7 @@
                                 <p class="category text-white">Software Developer</p><a
                                     class="btn btn-blue btn-round smooth-scroll mr-2" href="#contact" data-aos="zoom-in"
                                     data-aos-anchor="data-aos-anchor">Hire Me</a><a
-                                    class="btn btn-blue smooth-scroll btn-round" href="https://shlk.ga/pdfresume" data-aos="zoom-in"
+                                    class="btn btn-blue smooth-scroll btn-round" href="https://docs.google.com/document/d/1pRrGYuT8Bkt6aJy45y8HdtZMRrG_XZ0TkaLrlpK8ngA/edit?usp=sharing" data-aos="zoom-in"
                                     data-aos-anchor="data-aos-anchor">Download
                                     CV</a>
                             </div>
@@ -337,8 +337,8 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                                data-aos-anchor-placement="top-bottom"><a target="_blank" href="https://shlk.ga">
-                                                    <figure class="cc-effect"><img src="https://shlk.ga/logo.webp"
+                                                data-aos-anchor-placement="top-bottom"><a target="_blank" href="#Being Updated">
+                                                    <figure class="cc-effect"><img src="images/logo.webp"
                                                             alt="Image" />
                                                         <figcaption>
                                                             <div class="h4">Url Shortner</div>
@@ -347,7 +347,7 @@
                                                     </figure>
                                                 </a></div>
                                             <div class="cc-porfolio-image img-raised" data-aos="fade-up"
-                                                data-aos-anchor-placement="top-bottom"><a target="_blank" href="https://shlk.ga/masterflow">
+                                                data-aos-anchor-placement="top-bottom"><a target="_blank" href="https://masterflow-dem.000webhostapp.com">
                                                     <figure class="cc-effect"><img src="images/masterflow.png"
                                                             alt="Image" />
                                                         <figcaption>
