--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                         <div class="col-md-6">
                                             <div class="cc-porfolio-image img-raised" data-aos="fade-up"
                                                 data-aos-anchor-placement="top-bottom"><a target="_blank"
-                                                    href="https://shlk.ga/qrcode">
+                                                    href="#BeingUpdated">
                                                     <figure class="cc-effect"><img src="images/dtlogo.png"
                                                             alt="Image" />
                                                         <figcaption>
@@ -372,7 +372,7 @@
                                                 </a></div>
                                             <div class="cc-porfolio-image img-raised" data-aos="fade-up"
                                                 data-aos-anchor-placement="top-bottom"><a target="_blank"
-                                                    href="https://shlk.ga/attendance">
+                                                    href="windows/Attendance%20Accumulator%20-%20Vishnuraaj%20balasubramanian.exe">
                                                     <figure class="cc-effect"><img src="images/teams.png"
                                                             alt="Image" />
                                                         <figcaption>
@@ -522,6 +522,57 @@
                                         <p>Credential Id: 18AAZZZZZ4262<br>
                                             Grade Achieved: Good <br>
                                             <a href="https://drive.google.com/file/d/17gz3rZmcD0i1QLTi0QPFH0nmYn-VlMcS/view?usp=sharing"
+                                                target="_blank">Go
+                                                to Credential</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section">
+                    <div class="container cc-education">
+                        <div class="h4 text-center mb-4 title">Achievements</div>
+                        <div class="card">
+                            <div class="row">
+                                <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
+                                    data-aos-duration="500">
+                                    <div class="card-body cc-education-header">
+                                        <div class="h5">Google</div>
+                                        <p>Issued on October 2020<br>(This certification does not expire)</p>
+
+                                    </div>
+                                </div>
+                                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                                    <div class="card-body">
+                                        <div class="h5">Technical Support Essentials</div>
+                                        <p class="category">Google</p>
+                                        <p>Credential Id: HBZYYMV2NWRG <br>
+                                            Grade Achieved: Outstanding<br>
+                                            <a href="https://www.coursera.org/account/accomplishments/verify/HBZYYMV2NWRG"
+                                                target="_blank">Go
+                                                to Credential</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="row">
+                                <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
+                                    data-aos-duration="500">
+                                    <div class="card-body cc-education-header">
+                                        <div class="h5">Google</div>
+                                        <p>Issued on November 2020<br>(This certification does not expire)</p>
+
+                                    </div>
+                                </div>
+                                <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                                    <div class="card-body">
+                                        <div class="h5">Google</div>
+                                        <p class="category">Bits and Bytes of Computing</p>
+                                        <p>Credential Id: JLFUXXHSZH39<br>
+                                            Grade Achieved: Good <br>
+                                            <a href="https://www.coursera.org/account/accomplishments/verify/JLFUXXHSZH39"
                                                 target="_blank">Go
                                                 to Credential</a></p>
                                     </div>
