--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                                                 </a></div>
                                             <div class="cc-porfolio-image img-raised" data-aos="fade-up"
                                                 data-aos-anchor-placement="top-bottom"><a target="_blank"
-                                                    href="windows/Attendance%20Accumulator%20-%20Vishnuraaj%20balasubramanian.exe">
+                                                    href="https://demontricerz.github.io/vishnuraajbalasubramanian/windows/Attendance%20Accumulator%20-%20Vishnuraaj%20balasubramanian.exe">
                                                     <figure class="cc-effect"><img src="images/teams.png"
                                                             alt="Image" />
                                                         <figcaption>
