--- a/index.html
+++ b/index.html
@@ -528,11 +528,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="section">
-                    <div class="container cc-education">
-                        <div class="h4 text-center mb-4 title">Achievements</div>
                         <div class="card">
                             <div class="row">
                                 <div class="col-md-3 bg-success" data-aos="fade-right" data-aos-offset="50"
@@ -568,8 +563,8 @@
                                 </div>
                                 <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                     <div class="card-body">
-                                        <div class="h5">Google</div>
-                                        <p class="category">Bits and Bytes of Computing</p>
+                                        <div class="h5">Bits and Bytes of Computing</div>
+                                        <p class="category">Google</p>
                                         <p>Credential Id: JLFUXXHSZH39<br>
                                             Grade Achieved: Good <br>
                                             <a href="https://www.coursera.org/account/accomplishments/verify/JLFUXXHSZH39"
