--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                                         <div class="h5">Technical Support Essentials</div>
                                         <p class="category">Google</p>
                                         <p>Credential Id: HBZYYMV2NWRG <br>
-                                            Grade Achieved: Outstanding<br>
+                                            Grade Achieved: 100%<br>
                                             <a href="https://www.coursera.org/account/accomplishments/verify/HBZYYMV2NWRG"
                                                 target="_blank">Go
                                                 to Credential</a></p>
@@ -566,7 +566,7 @@
                                         <div class="h5">Bits and Bytes of Computing</div>
                                         <p class="category">Google</p>
                                         <p>Credential Id: JLFUXXHSZH39<br>
-                                            Grade Achieved: Good <br>
+                                            Grade Achieved: 96.83% <br>
                                             <a href="https://www.coursera.org/account/accomplishments/verify/JLFUXXHSZH39"
                                                 target="_blank">Go
                                                 to Credential</a></p>
