--- a/index.html
+++ b/index.html
@@ -668,6 +668,19 @@
     <script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/now-ui-kit.js?v=1.1.0"></script>
     <script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/js/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/demontricerz/vishnuraajbalasubramanian/scripts/main.js"></script>
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5ff57faaa9a34e36b969922d/1erbfld8p';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 
 </html>
